# WavPlayer

./: .gitignore  CMakeLists.txt
include/ComUtility/: ComConcepts.hpp  ComMixins.hpp  ComMixins.inl  ComObject.hpp  ComObject.inl  ComTraits.hpp  ComUtility.hpp
include/WavPlayer/: AudioMetadata.hpp  CommandType.hpp  IAudioSource.hpp  IAudioStream.hpp  Player.hpp  PlayerCommand.hpp  PlayerCommands.hpp  Typedefs.hpp  Utility.hpp  WavFile.hpp
src/WavPlayer/: PlayCommands.cpp  Player.cpp  PlayerCommands.cpp  WavFile.cpp  main.cpp
